client/src/containers/MetroMap/style.scss
.MetroMap {
    color: red;
    height: 100vh;
    width: 100vw;
    .leaflet-container {
        height: 100%;
        width: 100%;
        background: #141414;
        .dc-outline {
            pointer-events: none;
        }
        path.line-layer {
            pointer-events: none;
        }
        .label-icon {
            pointer-events: none;
        }
    }
    .leaflet-control-container {
        display: none;
    }
    .station-icon {
        border-radius: 50%;
        background: white;
        border: 3px solid black;
        z-index: 200 !important;
        &::after {
            content: '';
            border-radius: 50%;
            display: block;
            width: 18px;
            height: 18px;
            margin-top: -6px;
            margin-left: -6px;
            background: transparent;
        }
    }

    .transfer-station-icon {
        border-radius: 50%;
        background: white;
        border: 6px solid black;
        z-index: 201 !important;
        -webkit-box-shadow: 0px 0px 0px 3px black; /* Safari, Chrome */

        
        &::after {
            content: '';
            border-radius: 50%;
            display: block;
            width: 16px;
            height: 16px;
            margin-top: -6px;
            margin-left: -6px;
            background: transparent;
            border: 2px solid white;
            //-moz-box-shadow:inset 2px 2px 5px #202020; /* Firefox */
            //box-shadow:inset 2px 2px 5px #202020; /* CSS3 */
        }
    }

    .selected-station-icon {
        background: transparent;
        border-radius: 50%;
        box-shadow: 0 0 0 rgba(204,169,44, 0.4);
        animation: pulse 2s infinite;
        pointer-events: none;
    }

    .geolocation-button {
        position: fixed;
        cursor: pointer;
        bottom: 12px;
        right: 12px;
        height: 30px;
        width: 30px;
        border: 1px solid grey;
        background: #2b2b2b;
        border-radius: 50%;
        z-index: 998;
        user-select: none;
        &:after {
            border-radius: 50%;
            width: 100%;
            height: 100%;
            position: absolute;
            background-position: center; 
            background-repeat: no-repeat;
            background-image: url('../../assets/crosshairs.png');
            background-size: 18px 18px;
            content: '';
        }
        &.geolocating {
            &:after {
                -webkit-animation: rotateY 1s infinite linear;
                animation: rotateY 1s infinite linear;
            }
        }
    }

    @-webkit-keyframes rotateY {
        to { -webkit-transform: rotateY(360deg); }
    }
    @keyframes rotateY {
        to { transform: rotateY(360deg); }
    }

    @-webkit-keyframes pulse {
        0% {
          -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0.4);
        }
        70% {
            -webkit-box-shadow: 0 0 0 35px rgba(255,255,255, 0);
        }
        100% {
            -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0);
        }
      }
      @keyframes pulse {
        0% {
          -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0.4);
          box-shadow: 0 0 0 0 rgba(255,255,255, 0.4);
        }
        70% {
            -moz-box-shadow: 0 0 0 35px rgba(255,255,255, 0);
            box-shadow: 0 0 0 35px rgba(255,255,255, 0);
        }
        100% {
            -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0);
            box-shadow: 0 0 0 0 rgba(255,255,255, 0);
        }
      }
}

